--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,9 @@
 }
 
 .header-li {
-  font-size: 1vw;
-  font-weight: 400;
+  font-size: 1.1vw;
+  font-weight: 500 !important;
+
 }
 
 
@@ -20,20 +21,28 @@
   display: flex;
   align-items: center;
   height: 40px;
-  font-size: 0.9vw;
-  font-weight: 100;
+  font-size: 1vw;
+  width: 300px;
+  font-weight: 500;
   color: #333;
+}
+
+.header-li div{
+ display: flex;
+  flex-direction: row;
+  gap: 7px ;
 }
 
 
 
 .dropdown-menu li:hover {
-  transition: all 0.5s ease-in-out ;
+  transition: all 0.3s ease-in-out ;
   color: #fbc02d  ;
   transform: translateX(5px);
 }
+
 .group:hover .group-hover\:flex {
-  transform: translateY(-10px);
+  
 
   display: flex;
 
@@ -45,12 +54,12 @@
 
 .header-li:hover {
   color: #fbc02d;
-  transition: color 0.3s ease-in-out;
+  transition: color 0.1s ease-in-out;
 }
 
 .translate-scale:hover {
   transform: scale(1.1);
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.2s ease-in-out;
 }
 
 .power-education-head {
@@ -101,7 +110,7 @@ body {
   grid-template-columns: repeat(4, calc(30% - 85px));
   /* margin-left: 120px; */
   justify-content: center;
-  margin-top: -25vh;
+  margin-top: -250px;
   text-align: center;
 }
 
@@ -290,7 +299,7 @@ body {
 
 .counter-block h3 {
   margin: 0;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 600;
 }
 .counter-block:hover {
@@ -298,7 +307,7 @@ body {
 }
 
 .counter-block p {
-  font-size: 28px;
+  font-size: 30px;
   font-weight: 800;
   background: linear-gradient(45deg, #ffffff, #f0f0f0);
   -webkit-background-clip: text;
@@ -310,7 +319,7 @@ body {
 .educators {
   top: 20%;
   left: 10%;
-  width: 100px;
+  width: 130px;
 }
 
 .students {
@@ -321,7 +330,7 @@ body {
 
 .labs {
   top: 20%;
-  left: 45%;
+  left: 40%;
   transform: translateX(-50%);
   width: 130px;
 }
@@ -406,26 +415,38 @@ body {
 
 .LearningJourneyContent img {
   position: absolute;
-  top: 70px;
   left: 0;
-  width: 95%;
-
+  width: 100%;
   display: block;
   height: auto;
   z-index: 1;
 }
 
+.section4-div img {
+  height: 50px;
+}
+
+.section4-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.section4-div img:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
+}
+
 .LearningText {
   position: absolute;
-  top: 4%;
-  left: 49%;
+  top: 3%;
+  left: 45%;
   font-weight: 900;
   transform: translateX(-50%);
   font-size: 50px !important;
   text-align: left;
   padding: 0.5rem;
   z-index: 3;
-  width: 95%;
+  width: 70%;
   color: white;
 }
 
@@ -448,44 +469,44 @@ body {
   font-size: 13px;
   font-weight: 500;
   line-height: 1.4em;
-  width: 18vw;
+  width: 16vw;
   text-align: left;
   padding-top: 14px;
 }
 
 .step1 {
-  top: 20%;
-  left: 8%;
+  top: 18%;
+  left: 16%;
 }
 
 .step2 {
-  top: 36%;
-  left: 8%;
+  top: 29%;
+  left: 16%;
 }
 
 .step3 {
-  top: 60%;
-  left: 14%;
+  top: 49%;
+  left: 17%;
 }
 
 .step4 {
-  top: 41%;
-  left: 33%;
+  top: 34%;
+  left: 38%;
 }
 
 .step5 {
-  top: 20%;
-  left: 52%;
+      top: 15%;
+    left: 47%;
 }
 
 .step6 {
-  top: 37%;
-  left: 58%;
+  top: 30%;
+    left: 59.5%;
 }
 
 .step7 {
-  top: 57%;
-  left: 72%;
+  top: 47%;
+  left: 70%;
 }
 
 /*Section 7*/
@@ -535,10 +556,13 @@ body {
   height: 100%;
   object-fit: cover;
 }
+
+
 .item-1 {
   grid-column: 1;
   grid-row: 1;
 }
+
 .item-2 {
   grid-column: 1;
   grid-row: 2;
@@ -1413,11 +1437,9 @@ body {
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
   position: absolute;
   right: 9%;
-
   top: -100%;
-
   display: flex;
-  padding: 20px;
+  padding: 25px 25px 30px 30px;  
   flex-direction: column;
   overflow: hidden;
 }
@@ -1434,31 +1456,56 @@ body {
 }
 
 .image-slider-track {
-  display: flex;
-  width: calc(100vw * 5); /* 3 images */
+  position: relative;
+  width: 100%; /* 3 images */
+  height: 100%;
   transition: transform 0.5s ease-in-out;
 }
 
 .slider-image {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 70vh;
-  flex-shrink: 0;
   object-fit: cover;
-  position: relative;
-  z-index: -1000;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  z-index: 0;
 }
 
+.slider-image.active {
+  opacity: 1;
+  z-index: 1;
+}
+
+
 .slides-wrapper {
-  display: flex;
-  width: 500%;
-  transition: transform 0.7s ease-in-out;
+  position: relative;
+  height: 200px;
+  width: 100%;  
 }
 
 .slide-content {
-  width: 20%;
-  flex-shrink: 0;
-  padding: 20px 20px 0px 20px;
+   opacity: 0;
+  transform: translateY(70px);
+  transition: opacity 0.5s ease, transform 0.7s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
+
+.slide-content.active {
+  opacity: 1;
+  transform: translateY(0);
+  z-index: 2;
+}
+
+.slide-content:not(.active) {
+  z-index: 1;
+}
+
 
 .slide-content-a {
   width: 16.666666%;
@@ -1640,16 +1687,27 @@ body {
   padding: 40px;
   box-shadow: 0 25px 24px rgba(0, 0, 0, 0.2);
   padding: 40px;
+  border: 1px solid #e2e8f0;
   border-radius: 20px;
   gap: 40px;
+  z-index: 11;
 }
 
 .k-12-card-inner-div {
-  min-height: 240px !important;
+  height: 300px !important;
+}
+
+.k-12-card-inner-div p{
+  font-size: 1vw !important;
+}
+
+.k-12-card-inner-div h1{
+  font-size: 1.2vw !important;
 }
 
 .k-12-card-outer-div {
   box-shadow: 0 25px 24px rgba(0, 0, 0, 0.2);
+  max-height: 320px !important;
 }
 
 .k-12-card-outer-div:hover {
@@ -1702,6 +1760,7 @@ body {
 
 .arrow {
   font-size: 1.2rem;
+  transform: rotate(45deg);
   transition: transform 0.3s ease;
 }
 
@@ -1809,6 +1868,10 @@ body {
     gap: 8px;
     text-decoration: none;
     width: fit-content;
+  }
+
+  .seperate-line{
+    display: none;
   }
 
   .k-12-desc {
@@ -2018,7 +2081,7 @@ body {
 
   .k-12-cards-grid {
     display: grid;
-    grid-template-columns: repeat(2, 0fr) !important;
+    grid-template-columns: repeat(2, 1fr) !important;
     gap: 20px;
     margin: auto;
     width: auto !important;
@@ -3503,17 +3566,117 @@ body {
   transition: transform 0.3s ease;
 }
 
-button:hover {
-  background: #e0a800;
+
+.arrow:hover{
+  transform: scale(1.05);
 }
+
+
+.learn-more-btn {
+  position: relative;
+  overflow: hidden;
+  background: transparent;
+  color: #fff;
+  background-color: #FBC324;
+  box-shadow: 0 0 0 1px #FBC324; 
+  transition: color 0.4s ease, border 0.4s ease;
+  z-index: 1;
+}
+
+.learn-more-btn::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 0%;
+  width: 100%;
+  background-color: #fff;
+  z-index: -1;
+  transition: height 0.4s ease;
+}
+
+.learn-more-btn:hover::before {
+  height: 100%;
+}
+
+.learn-more-btn:hover {
+  color: #FBC324;
+  border-color: #fff;
+}
+
 .explore-btn:hover {
-  background: #e0a800;
+  background: #FBC324;
+}
+
+.lab-button {
+  position: relative;
+  overflow: hidden;
+  background: transparent;
+  color: #000;
+  background-color: #FBC324;
+  box-shadow: 0 0 0 1px #FBC324; 
+  transition: color 0.4s ease, border 0.4s ease;
+  z-index: 1;
+}
+
+.lab-button::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 0%;
+  width: 100%;
+  background-color: #fff;
+  z-index: -1;
+  transition: height 0.4s ease;
+  border-radius: 20px;
+}
+
+.lab-button:hover::before {
+  height: 100%;
 }
 
 .lab-button:hover {
-  background: #e0a800 !important;
+  color: #FBC324;
+  border-color: #fff;
 }
 
+
 .read-more-btn:hover {
-  background: #e0a800 !important;
+  background: #FBC324 !important;
 }
+
+
+.shop-now-btn{
+  position: relative;
+  overflow: hidden;
+  background: transparent;
+  border-radius: 20px;
+  color: #fff;
+  background-color: #ff8c00;
+  box-shadow: 0 0 0 1px #ff8c00; 
+  transition: color 0.4s ease, border 0.4s ease;
+  z-index: 1;
+}
+
+.shop-now-btn::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 0%;
+  width: 100%;
+  background-color: #fff;
+  z-index: -1;
+  transition: height 0.4s ease;
+}
+
+.shop-now-btn:hover::before {
+  height: 100%;
+}
+
+.shop-now-btn:hover {
+  color: #ff8c00;
+  border-color: #fff;
+}
+
